components/Footer/Footer.module.css
.footer {
  background-color: var(--color-base-pewter);
  padding: 20px;
  text-align: center;
  border-top: 0.8px solid var(--color-primary);
}

.footer-content {
  margin: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.footer-text-container {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.footer-text,
.footer-email {
  color: var(--color-neutral-light);
  text-decoration: none;
  margin-left: 16px;
  text-align: start;
  align-items: center;
}

.footer-email {
  display: flex;
  align-items: center;
}

.footer-email:hover {
  color: var(--color-accent);
}

.email-icon {
  margin-right: 8px;
  padding: 0;
}

.social-icon {
  margin: 0 8px;
  text-decoration: none;
}

@media screen and (max-width: 768px) {
  .footer-content {
    flex-direction: column;
  }
  .footer-text {
    margin: 8px 0;
    text-align: center;
  }
}

